# sample-genai-startups

agentic-coding-library/agents/aws-bill-shock-preventer/: README.md
agentic-coding-library/agents/aws-bill-shock-preventer/.kiro/agents/: aws-bill-shock-preventer.json
agentic-coding-library/agents/aws-bill-shock-preventer/.kiro/context/aws-bill-shock-preventer/: cost-reference.md  execution-rules.md  guidelines.md  prompt.md  startup-patterns.md
agentic-coding-library/agents/capacity-finder-agent/: .gitignore  README.md
agentic-coding-library/agents/capacity-finder-agent/.kiro/: mcp.json
agentic-coding-library/agents/capacity-finder-agent/.kiro/agents/: capacity-finder-agent.json
agentic-coding-library/agents/capacity-finder-agent/.kiro/context/capacity-finder-agent/: guidelines.md
agentic-coding-library/agents/multi-account-architect/: .gitignore  README.md
agentic-coding-library/agents/multi-account-architect/.kiro/agents/: multi-account-architect.json
agentic-coding-library/agents/multi-account-architect/.kiro/context/multi-account-architect/: guidelines.md
agentic-coding-library/agents/multi-account-architect/.kiro/hooks/: verify-mcp-tools.json
agentic-coding-library/agents/multi-account-architect/aws-multi-account-mcp/: README.md  pyproject.toml
agentic-coding-library/agents/multi-account-architect/aws-multi-account-mcp/src/aws_multi_account_mcp/: __init__.py  server.py  tools.py
agentic-coding-library/agents/service-quota-agent/: README.md
agentic-coding-library/agents/service-quota-agent/.kiro/agents/: service-quota-agent.json
(+1 files in other folders)
